--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>mybatis-01</module>
         <module>mybatis-02</module>
+        <module>Mybatis-03</module>
+        <module>Mybatis-04</module>
     </modules>
 
     <dependencies>
