--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
         <module>mybatis-02</module>
         <module>Mybatis-03</module>
         <module>Mybatis-04</module>
+        <module>Mybatis-05</module>
+        <module>Mybatis-06</module>
+        <module>Mybatis-07</module>
+        <module>Mybatis-08</module>
     </modules>
 
     <dependencies>
@@ -33,11 +37,39 @@
             <version>3.5.10</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
 
 </project>
