--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>Mybatis-06</module>
         <module>Mybatis-07</module>
         <module>Mybatis-08</module>
+        <module>Mybatis-09</module>
     </modules>
 
     <dependencies>
